@@ -56,9 +56,8 @@
       </tgroup>
     </informaltable>
   </sect1>
-</chapter>
 
-<chapter id="cha-dparam-start">
+<sect1 id="sect-dparam-start">
   <title>Getting Started</title>
 
   <para>
@@ -122,10 +121,9 @@
     ...
   }
   </programlisting>
+</sect1>
 
-</chapter>
-
-<chapter id="cha-dparam-define">
+<sect1 id="sect-dparam-define">
   <title>Defining Parameter Specificiations</title>
   <para>
     You can define the dparams you need anywhere within your element but will
@@ -199,7 +197,7 @@
       </listitem>
     </itemizedlist>
   </para>
-  <sect1 id="sect-dparam-direct">
+  <sect2 id="sect-dparam-direct">
     <title>Direct Method</title>
     <para>
       This method is the simplest and has the lowest overhead for parameters
@@ -237,8 +235,8 @@
       You can now use <filename>example-&gt;volume</filename> anywhere in your
       element knowing that it will always contain the correct value to use.
     </para>
-  </sect1>
-  <sect1 id="sect-dparam-callback">
+  </sect2>
+  <sect2 id="sect-dparam-callback">
     <title>Callback Method</title>
     <para>
       This should be used if the you have other values to calculate whenever a
@@ -306,8 +304,8 @@ gst_example_update_volume(GValue *value, gpointer data)
       Now <filename>example-&gt;volume_i</filename> can be used elsewhere and it
       will always contain the correct value.
     </para>
-  </sect1>
-  <sect1 id="sect-dparam-array">
+  </sect2>
+  <sect2 id="sect-dparam-array">
     <title>Array Method</title>
     <para>
       This method is quite different from the other two. It could be thought of
@@ -339,10 +337,10 @@ gst_example_update_volume(GValue *value, gpointer data)
       not yet ready to be used in elements, but plugin writers should be aware
       of its existance for the future.
     </para>
-  </sect1>
-</chapter>
+  </sect2>
+</sect1>
 
-<chapter id="cha-dparam-loop">
+<sect1 id="cha-dparam-loop">
   <title>The Data Processing Loop</title>
   <para>
     This is the most critical aspect of the dparams subsystem as it relates to
@@ -441,7 +439,7 @@ example_chain (GstPad *pad, GstBuffer *buf)
     <filename>GST_DPMAN_PREPROCESS</filename> depending on the mode that the
     dparam manager is running in (see below).
   </para>
-  <sect1 id="sect-dparam-modes">
+  <sect2 id="sect-dparam-modes">
     <title>DParam Manager Modes</title>
     <para>
       A brief explanation of dparam manager modes might be useful here even
@@ -491,8 +489,8 @@ example_chain (GstPad *pad, GstBuffer *buf)
       mode this could be done without affecting the sample accuracy of the
       parameter updates
     </para>
-  </sect1>
-  <sect1 id="sect-dparam-audio-video">
+  </sect2>
+  <sect2 id="sect-dparam-audio-video">
     <title>DParam Manager Modes</title>
     <para>
       All of the explanation so far has presumed that the buffer contains audio
@@ -504,5 +502,6 @@ example_chain (GstPad *pad, GstBuffer *buf)
       required. For more than one frame per buffer, treat it the same as the
       audio case.
     </para>
-  </sect1>
+  </sect2>
+</sect1>
 </chapter>
